--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>IDIOMIZER</title>
+        <link
+            rel="icon"
+            href="https://www.svgrepo.com/show/117084/i-letter.svg"
+        />
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
