--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     </head>
     <body>
         <main>
-            <button type="button" id="get_idiom">Get Idiom</button>
+            <button id="get_idiom">Get Idiom</button>
+            <button id="get_word">Get Word</button>
             <div id="result"></div>
         </main>
         <script src="idioms.js"></script>
